# better-minecraft-clone

./: .gitignore  CMakeLists.txt
BetterMinecraftClone/: BetterMinecraftClone.cpp  BetterMinecraftClone.h  CMakeLists.txt  CMakeSettings.json  Chunk.cpp  Chunk.h  ChunkBuilder.cpp  ChunkBuilder.h  ChunkMesh.cpp  ChunkMesh.h  Game.cpp  Game.h  Shader.cpp  Shader.h  ShaderProgram.h  Window.cpp  Window.h  WorldChunks.cpp  WorldChunks.h  config.h
BetterMinecraftClone/glad/include/glad/: glad.h
BetterMinecraftClone/glad/src/: glad.c
BetterMinecraftClone/shaders/: block_highlight.frag  block_highlight.vert  terrain.frag  terrain.vert
BetterMinecraftClone/src/: BetterMinecraftClone.cpp  BlockHighlight.cpp  BlockHighlight.h  BlockTypes.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkBuilder.cpp  ChunkBuilder.h  ChunkBuilderWorkerScheduler.cpp  ChunkBuilderWorkerScheduler.h  ChunkMesh.cpp  ChunkMesh.h  ChunkSectionView.cpp  ChunkSectionView.h  Game.cpp  Game.h  LightingScheduler.cpp  LightingScheduler.h  MathUtils.h  ShaderProgram.cpp  ShaderProgram.h  TerrainGenerator.cpp  TerrainGenerator.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  TextureLoader.cpp  TextureLoader.h  ThreadPool.h  Types.h  Window.cpp  WorldChunks.cpp  WorldChunks.h  WorldGeneratorScheduler.cpp  WorldGeneratorScheduler.h  config.h
